# gemma4-mtp-benchmark

./: .gitignore  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
benchmarks/: 2026-05-06-dflash-contrast-m1-max.md  2026-05-06-dflash-mlx-m1-max.md  2026-05-06-m1-max.md  2026-05-06-task-matrix-m1-max.md  2026-05-07-dflash-coding-cases-m1-max.md  2026-05-07-dflash-success-rerun-m1-max.md
docs/: index.html
scripts/: dflash_coding_cases.py  dflash_contrast.py  e4b-coding-gpu.sh  quick-e2b-gpu.sh  run-dflash-coding-cases.sh  run-dflash-contrast.sh  run-dflash-mlx.sh  run-gpu-task-matrix.sh
src/gemma4_mtp_benchmark/: __init__.py  cli.py  models.py  prompts.py
tests/: test_cli_chat.py
video/dflash-gemma4-slides/: DESIGN.md  README.md  index.html  package.json
video/dflash-gemma4-slides/scripts/: export-slides.sh
video/mtp-speed-comparison/: DESIGN.md  README.md  index.html  meta.json  package.json
